# powerco_customer_retain

./: README.md  pyproject.toml
src/: Feature Engineering.ipynb  data_analysis.ipynb  feature_engineering.ipynb
