[tool.poetry]
name = "powerco-customer-retain"
version = "0.1.0"
description = ""
authors = ["abhiiiiiiijit <abhijitjan22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
